--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <h2 class="section-title">Services</h2>
                 <div class="services-grid">
                     <div class="service-card">
-                        <div class="service-icon">🎓</div>
+                        <div class="service-icon"></div>
                         <h3>Professional AI Training</h3>
                         <p>Executive-level AI workshops for L&D teams and business leaders, focusing on AI strategy, practical applications, and responsible AI implementation.</p>
                         <ul class="service-features">
@@ -93,7 +93,7 @@
                     </div>
 
                     <div class="service-card">
-                        <div class="service-icon">🤖</div>
+                        <div class="service-icon"></div>
                         <h3>AI Agents Development</h3>
                         <p>Custom AI agents that automate complex workflows and enhance decision-making processes for your business operations.</p>
                         <ul class="service-features">
@@ -104,9 +104,21 @@
                         </ul>
                         <a href="#contact" class="service-cta">Learn More →</a>
                     </div>
-
+                    
                     <div class="service-card">
-                        <div class="service-icon">📚</div>
+                        <div class="service-icon"></div>
+                        <h3>Web App Development Development</h3>
+                        <p>Custom web applications built with modern technologies to enhance user experience and streamline business operations.</p>
+                        <ul class="service-features">
+                            <li>Responsive Design</li>
+                            <li>Modern Frameworks</li>
+                            <li>Performance Optimization</li>
+                            <li>Integration Services</li>
+                        </ul>
+                        <a href="#contact" class="service-cta">Learn More →</a>
+                    </div>
+                    <div class="service-card">
+                        <div class="service-icon"></div>
                         <h3>RAG Applications</h3>
                         <p>Retrieval-Augmented Generation applications that combine the power of large language models with your proprietary data.</p>
                         <ul class="service-features">
