--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tauqeer Ali Khan | AI & IoT Systems Engineer</title>
+    <title>Khan Tauqeer Ali</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;600;700&family=Manrope:wght@300;400;600;700;800&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">TAK</div>
+                <div class="logo">Khan Tauqeer Ali</div>
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
@@ -145,7 +145,7 @@
                             </div>
                             <span class="job-period">02/25 - Present</span>
                         </div>
-                        <p class="job-location">📍 Huddersfield, UK</p>
+                        <p class="job-location">📍 Leeds, UK</p>
                         <ul class="job-description">
                             <li>Leading the design and implementation of a large-scale IoT and AI system for a medical device, integrating over 5,000 sensor-enabled devices with cloud-based data pipelines to enable real-time monitoring and analytics</li>
                             <li>Creating end-to-end software solutions, combining Python, Flask, PostgreSQL, and React, to streamline complex workflows, demonstrating expertise in full-stack development and scalable system design</li>
