--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <h2 class="section-title">Blog</h2>
                 <div class="blog-grid">
                     <div class="blog-card" onclick="window.open('https://medium.com/@khantauqeerali26/what-ai-is-doing-in-financial-industry-8066f8aa4de0', '_blank')">
-                        <img src="financial-ai-banner.png" alt="AI in Financial Industry" class="blog-banner-image">
+                        <img src="financial.png" alt="AI in Financial Industry" class="blog-banner-image">
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-tag">AI</span>
@@ -342,7 +342,8 @@
                     </div>
 
                     <div class="blog-card" onclick="window.open('https://medium.com/@khantauqeerali26/ai-as-it-is-63a8f76b062f', '_blank')">
-                        <div class="blog-image">🤖</div>
+                        <img src="aiyears.png" alt="AI in Financial Industry" class="blog-banner-image">
+                       
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <span class="blog-tag">AI</span>
